crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__text__nested_elements_with_static_text.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(\"<span>hello</span><span>bye</span>\")"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div><span>hello</span><span>bye</span></div>`)
}
