crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__text__static_text_with_template_string_special_chars.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(\"`${foo}`\")"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div>\`\${foo}\`</div>`)
}
